# R-Type

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Makefile  README.md  build.bat  build.sh  conanfile.txt  evil_script.sh  install.bat  perf.data  vcpkg.json
.github/workflows/: action.yml  release.yml
config/entities/: 10.json  11.json  12.json  13.json  14.json  15.json  16.json  18.json  19.json  2.json  20.json  21.json  4.json  5.json  6.json  allies.json  baby_fly.json  baby_octopus.json  bomber_boss.json  boss.json  bullet.json  bullet_1.json  bullet_2.json  bullet_3.json  bullet_4.json  bullet_effect.json  charging_effect.json  ennemy_bullet.json  explosion_effect.json  explosion_effect2.json  explosion_effect3.json  explosion_effect4.json  fly.json  fly_boss.json  forcepod.json  forcepod2.json  forcepod3.json  forcepod_bullet.json  forcepod_bullet2.json  forcepod_bullet3.json  (+33 more)
config/level/: lvl 1 tmp.lua  lvl1.lua  lvl2.lua  lvl3.lua  lvl4.lua
ressources/mobs/: mobs.h
src/client/: CMakeLists.txt  ClientError.cpp  ClientError.hh  Error.hh  Game.cpp  Game.hh  Makefile  main.cpp
src/client/client/: Client.cpp  Client.hh
src/client/communication/: Client.cpp  Client.hh
src/ecs/: AComponent.cpp  AComponent.hpp  ASystem.cpp  ASystem.hh  ASystem.hpp  CMakeLists.txt  Coordinator.cpp  Coordinator.hh  Coordinator.hpp  Ecs.hpp  EcsError.cpp  EcsError.hh  Entity.cpp  Entity.hpp  Error.cpp  IComponent.cpp  IComponent.hh  IComponent.hpp  ISystem.cpp  ISystem.hh  ISystem.hpp  Include.hh  Makefile  Print.cpp  Print.hpp
src/ecs/Components/: ActionComponent.cpp  ActionComponent.hh  AttackComponent.cpp  AttackComponent.hh  AutoUpdateTextComponent.cpp  AutoUpdateTextComponent.hh  ClickEffectComponent.cpp  ClickEffectComponent.hh  ClockComponent.cpp  ClockComponent.hh  DamageComponent.cpp  DamageComponent.hh  DifficultyComponent.cpp  DifficultyComponent.hh  DirectionComponent.cpp  DirectionComponent.hh  DirectionPatternComponent.cpp  DirectionPatternComponent.hh  EntityTypeComponent.cpp  EntityTypeComponent.hh  EntityTypeComponent.hpp  EventComponent.cpp  EventComponent.hh  HealthComponent.cpp  HealthComponent.hh  HealthComponent.hpp  HoverEffectComponent.cpp  HoverEffectComponent.hh  IntRectComponent.cpp  IntRectComponent.hh  LevelComponent.cpp  LevelComponent.hh  MappingInputComponent.cpp  MappingInputComponent.hh  MenuComponent.cpp  MenuComponent.hh  MusicComponent.cpp  MusicComponent.hh  ParseLevelInfoComponent.cpp  ParseLevelInfoComponent.hh  (+29 more)
src/ecs/Components/AttackPatterns/: AttackPatterns.cpp  AttackPatterns.hh
src/ecs/Systems/: HandleAnimationSystem.cpp  HandleAnimationSystem.hpp  HandleBossAttackSystem.cpp  HandleBossAttackSystem.hh  HandleClearSystem.cpp  HandleClearSystem.hpp  HandleColisionSystem.cpp  HandleColisionSystem.hpp  HandleCollisionSystem.cpp  HandleCollisionSystem.hpp  HandleDisplaySystem.cpp  HandleDisplaySystem.hpp  HandleDrawSystem.cpp  HandleDrawSystem.hpp  HandleDrawTextSystem.cpp  HandleDrawTextSystem.hpp  HandleEntitySpawnSystem.cpp  HandleEntitySpawnSystem.hh  HandleEventSystem.cpp  HandleEventSystem.hpp  HandleMoveSpriteSystem.cpp  HandleMoveSpriteSystem.hpp  HandleMoveSystem.cpp  HandleMoveSystem.hpp  HandleMusicSystem.cpp  HandleMusicSystem.hpp  HandlePatternSystem.cpp  HandlePatternSystem.hpp  HandleShootSystem.cpp  HandleShootSystem.hpp  HandleSoundSystem.cpp  HandleSoundSystem.hpp
src/protocolHandler/: CMakeLists.txt  Decoder.cpp  Decoder.hh  Encoder.cpp  Encoder.hh
src/server/: CMakeLists.txt  Error.cpp  Error.hh  Makefile  includes.hh  main.cpp
src/server/client/: Client.cpp  Client.hh
src/server/clientServer/: ClientServer.cpp  ClientServer.hh
src/server/command/: ACommand.cpp  ACommand.hh  ICommand.hh
src/server/command/commands/: AckMissingCommand.cpp  AckMissingCommand.hh  ActionPlayerCommand.cpp  ActionPlayerCommand.hh  ConnexionCommand.cpp  ConnexionCommand.hh  DeleteEntityCommand.cpp  DeleteEntityCommand.hh  DisconnexionCommand.cpp  DisconnexionCommand.hh  GameEndCommand.cpp  GameEndCommand.hh  GameStartCommand.cpp  GameStartCommand.hh  InfoEntityCommand.cpp  InfoEntityCommand.hh  InfoLevelCommand.cpp  InfoLevelCommand.hh  MoveCommand.cpp  MoveCommand.hh  MoveEntityCommand.cpp  MoveEntityCommand.hh  MovePlayerCommand.cpp  MovePlayerCommand.hh  NewEntityCommand.cpp  NewEntityCommand.hh  ShootCommand.cpp  ShootCommand.hh  StartCommand.cpp  StartCommand.hh
src/server/command/factory/: CommandFactory.cpp  CommandFactory.hh
src/server/server/: Server.cpp  Server.hh
tests/: CMakeLists.txt  Criterion.hh  Makefile  client_tests.cpp  server_tests.cpp
tests/client/: Client_tests.cpp
tests/ecs/: Components_tests.cpp  Coordinator_tests.cpp  Entities_tests.cpp
tests/protocolHandler/: decoder_test.cpp  encoder_test.cpp
tests/server/: Command_tests.cpp  Server_tests.cpp
